# webeye.backend

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: context.py  exceptions.py  main.py  settings.py
src/auth/: dependencies.py  exceptions.py  model.py  persistence.py  service.py  utils.py
src/monitored_url/: exceptions.py  model.py  persistence.py  service.py
src/monitored_webpage/: exceptions.py  model.py  persistence.py  service.py
src/monitored_webpage/deprecated/: persistence.py
src/monitoring_events/: exceptions.py  model.py  persistence.py  service.py
src/routers/: auth.py  monitored_url.py  monitored_webpage.py  monitoring_events.py  scheduled_tasks.py  user_account.py
src/scheduled_tasks/: exceptions.py  model.py  persistence.py  service.py
src/shared/: db_pool.py  db_repository.py  entity.py  utils.py
src/shared/database/: db_pool.py  db_repository.py  exceptions.py  utils.py
src/shared/psycopg/: db_pool.py  db_repository.py  utils.py
src/user_account/: exceptions.py  model.py  persistence.py  service.py
src/user_account/deprecated/: persistence.py
tests/: conftest.py  test_db_repository.py  test_user_account.py
tests/api/: conftest.py  test_monitored_webpage.py  test_root.py
tests/deprecated/: test_db_repository.py  test_user_account.py
tests/mocks/monitored_webpage/: persistence.py
tests/mocks/user_account/: persistence.py
tests/unit/: test_db_repository.py
